# VerdantAbode

./: .env_template  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  debug-server.sh  debug.sh  flash.sh  setup.sh
doc/: controller.cpp  flowchart.drawio
include/: FreeRTOSConfig.h  blinky.hpp  co2_monitor.hpp  devicestate.hpp  eeprom.hpp  gmp252.hpp  i2c.hpp  local_inputs.hpp  lwipopts.h  modbus_client.hpp  parser.hpp  pin.hpp  sdp610.hpp  system.hpp  util.cpp  util.hpp
include/action/: action_gmp252.hpp  action_hmp60.hpp  action_local_inputs.hpp  action_sdp610.hpp  action_wifi_setup.hpp
include/display/: PicoI2CBus.cpp  PicoI2CBus.h
include/display/ssd1306/: i2c_device.h  ssd1306.cpp
include/driver/: i2c.hpp  rom.hpp  uart.hpp  wifi.hpp
include/driver/mqtt/: Countdown.h  IPStack.cpp  IPStack.h
include/lib/: README  i2c.hpp
include/modbus/: client.hpp  modbus_client.hpp  modbus_register.hpp  nanomodbus.h  register.hpp  ringbuffer.hpp  uart.hpp
include/namespace/: config.hpp  pin.hpp  system.hpp
include/scrap/: eeprom.cpp  gmp252.hpp  i2c.hpp  input_local.hpp  ssd1306.h
include/task/: blinky.hpp  controller.hpp  gmp252.hpp  hmp60.hpp  local_inputs.hpp  mio.hpp  oled.hpp  parser.hpp  sdp610.hpp  valve.hpp  wifi.hpp  wifi_send.hpp
lib/: CMakeLists.txt  ringbuffer.cpp
lib/driver/: Countdown.cpp  README.md  i2c.cpp  i2c.hpp  rom.cpp  rom.hpp  uart.cpp  uart.hpp  wifi.cpp
lib/driver-i2c/: i2c.cpp
lib/modbus/: modbus_client.cpp  modbus_register.cpp
lib/task/: gmp252.cpp  sdp610.cpp
scrap/: oled.cpp  oled_config.hpp  oled_task.cpp  wifi.cpp  wifi.hpp
scrap/display/: framebuf.cpp  framebuf.h  mono_vlsb.cpp
scrap/display/fonts/: FreeMono12pt7b.h
scrap/i2c/: PicoI2CDevice.cpp
src/: CMakeLists.txt  blinky.cpp  co2_monitor.cpp  eeprom.cpp  gmp252.cpp  local_input.cpp  local_inputs.cpp  main.cpp  main2.cpp  modbus_client.cpp  oled.cpp  oled_config.hpp  oled_task.cpp  parser.cpp  ringbuffer.cpp  sdp610.cpp  ssd1306.cpp  system.hpp  uart.cpp  util.cpp  wifi.cpp
src/action/: action_gmp252.cpp  action_hmp60.cpp  action_local_inputs.cpp  action_sdp610.cpp  action_wifi_setup.cpp
src/i2c/: PicoI2CDevice.h
src/modbus/: modbus_client.cpp  modbus_register.cpp  nanomodbus.c  uart.cpp
src/scrap/: i2c.cpp  local_input.cpp
src/task/: blinky.cpp  controller.cpp  gmp252.cpp  hmp60.cpp  local_inputs.cpp  mio.cpp  oled.cpp  parser.cpp  sdp610.cpp  valve.cpp  wifi.cpp  wifi_send.cpp
wifi_rtos/: CMakeLists.txt  make.sh
wifi_rtos/src/: CMakeLists.txt  main.cpp  wifi.cpp  wifi.hpp
